# command-qq

./: .gitignore  .travis.yml  .vim.custom  CHANGELOG.md  Guardfile  LICENSE  README.html  README.md  System-Command-QQ-CommandT.html  System-Command-QQ-Embed.html  System-Command-QQ-Eval.html  System-Command-QQ-Predef.html  System-Command-QQ.html  System-Shell-QQ-ShellT.html  System-Shell-QQ.html  command-qq.cabal  command-qq.haddock  command-qq.nix  default.nix  doc-index.html  index-frames.html  index.html  mini_System-Command-QQ-CommandT.html  mini_System-Command-QQ-Embed.html  mini_System-Command-QQ-Eval.html  mini_System-Command-QQ-Predef.html  mini_System-Command-QQ.html  mini_System-Shell-QQ-ShellT.html  mini_System-Shell-QQ.html  params.json  shell-qq.cabal  shell-qq.haddock  shell.nix
example/: CommandT.hs
examples/: CommandT.hs  CustomQQ.hs
src/: System-Command-QQ-CommandT.html  System-Command-QQ-Embed.html  System-Command-QQ-Eval.html  System-Command-QQ-Predef.html  System-Command-QQ.html  System-Shell-QQ-ShellT.html  System-Shell-QQ.html
src/System/Command/: QQ.hs
src/System/Command/QQ/: CommandT.hs  Embed.hs  Eval.hs  Predef.hs
src/System/Shell/: QQ.hs
src/System/Shell/QQ/: ShellT.hs
test/: Doctests.hs
test/System/Command/: QQSpec.hs
test/System/Command/QQ/: EmbedSpec.hs  PredefSpec.hs
tests/: CustomSpec.hs  CustomSpecQQ.hs  Doctests.hs  EmbeddingSpec.hs  ShellSpec.hs  ShellSpecQQ.hs
tests/System/Command/QQ/: EmbedSpec.hs  EvalSpec.hs
