name:                shell-qq
version:             0.1.0.0
synopsis:            Quasiquoters for shell commands
homepage:            http://biegunka.github.io/shell-qq/
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.10


library
  default-language:    Haskell2010
  build-depends:       base == 4.*,
                       process,
                       template-haskell,
                       unix
  hs-source-dirs:      src
  exposed-modules:     System.Shell.QQ

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       base == 4.*,
                       doctest
  hs-source-dirs:      tests
  main-is:             Doctests.hs

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       base == 4.*,
                       hspec,
                       shell-qq,
                       template-haskell
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       CustomSpec
                       CustomSpecQQ
                       EmbeddingSpec


source-repository head
  type:     git
  location: https://github.com/biegunka/shell-qq
